# tiktok-whisper

./: .dockerignore  .env.example  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.simple  Dockerfile.worker  GOLANG_REVERSE_ENGINEERING_GUIDE.md  MODERNIZATION_REPORT.md  Makefile  README.md  README_zh.md  RESTORATION_COMPLETE.md  SECURITY_UPDATES.md  TEST_REPORT.md  TEST_RESULTS_SUMMARY.md  TODO.md  docker-compose.shared-network.yml  docker-compose.yml  go.mod  go.sum  providers-example.yaml  providers-ssh-example.yaml  providers-whisper-server-example.yaml  providers.docker-whisper.yaml  providers.yaml  quick_migrate.go  requirements.txt  temp_v2t_binary_analysis.md  test-whisper-no-proxy.sh  test-whisper-server-batch.sh  test-whisper-ssh-forward.sh  test_db.go  web-main.go
.github/workflows/: integration-tests.yml
_deprecated_backup_20250806/temporal/python-worker/: Dockerfile  README.md  activities.py  activities_only_worker.py  pyproject.toml  simple_worker.py  worker.py
cmd/v2t/: main.go
docs/: CURRENT_PGVECTOR_STATUS.md  DATABASE_OPTIMIZATION_PLAN.md  DUAL_EMBEDDING_TDD_PLAN.md  EMBEDDING_IMPLEMENTATION_PLAN.md  FINAL_CLEANUP_SUMMARY.md  PROVIDER_FRAMEWORK_ARCHITECTURE.md  PROVIDER_QUICK_START.md  README.md  SSH_WHISPER_PROVIDER.md  SWAGGER_DEVELOPMENT_GUIDE.md  TRANSCRIPTION_EMBEDDINGS_DESIGN.md  WHISPER_SERVER_PROVIDER.md  ZERO_DOWNTIME_MIGRATION_PLAN.md  docs.go  swagger.json  swagger.yaml
scripts/: refactor_tests.sh  test-whisper-server.sh
test/: integration_test.go  provider_switching_test.go
web/: README.md  server.go
(+354 files in other folders)
